Make select box non-searchable to reproduce the bug.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
 <ng-select [items]="options"
            bindLabel="name"
            bindValue="id"
-           [(ngModel)]="selectedOption">
+           [(ngModel)]="selectedOption"
+           [searchable]="false">
 </ng-select>
